add second instruction page

--- a/src/pages/SecondInstructionPage.module.scss
+++ b/src/pages/SecondInstructionPage.module.scss
@@ -23,7 +23,7 @@
 }
 
 .alienBubble {
-  background-image: url('/src/assets/alienInBubble.svg');
+  background-image: url('/src/assets/goodAlien.svg');
   background-size: contain;
   background-repeat: no-repeat;
   width: 70vw;
@@ -31,7 +31,7 @@
 }
 
 .instruction {
-  background-image: url('/src/assets/Нажимай\ на\ НЛО\ и\ отравляй\ их\ В\ ДАЛЕКИЙ\ КОСМОС!.svg');
+  background-image: url('/src/assets/secondInstruction.svg');
   background-size: contain;
   background-repeat: no-repeat;
   margin-top: 20vh;
