--- a/src/pages/FirstInstructionPage.module.scss
+++ b/src/pages/FirstInstructionPage.module.scss
@@ -22,12 +22,31 @@
   justify-content: space-around;
 }
 
-.alienBubble {
-  background-image: url('/src/assets/alienInBubble.svg');
+.alien {
+  background-image: url('/src/assets/shipGreen_manned.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 40vw;
+  height: 30vh;
+  margin-top: 20px;
+}
+
+.bubbledAlien {
+  background-image: url('/src/assets/Bubble.svg'),
+    url('/src/assets/shipGreen_manned.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 40vw;
+  height: 30vh;
+  margin-top: 20px;
+}
+
+.hand {
+  background-image: url('/src/assets/hand.svg');
   background-size: contain;
   background-repeat: no-repeat;
-  width: 70vw;
-  height: 40vh;
+  width: 25vw;
+  height: 25vh;
 }
 
 .instruction {
