--- a/src/pages/SecondInstructionPage.module.scss
+++ b/src/pages/SecondInstructionPage.module.scss
@@ -69,6 +69,8 @@
   margin-bottom: 5vh;
   width: 50vw;
   padding: 5vw;
+  text-decoration: none;
+  text-align: center;
 
   &:hover {
     background-color: #de2a1d;
