--- a/src/pages/StartingPage.module.scss
+++ b/src/pages/StartingPage.module.scss
@@ -38,6 +38,7 @@
   border-radius: 6px;
   border-style: none;
   padding: 20px;
+  text-decoration: none;
 
   &:hover {
     background-color: #de2a1d;
