adapt for mobile phones

--- a/src/pages/FirstInstructionPage.module.scss
+++ b/src/pages/FirstInstructionPage.module.scss
@@ -26,8 +26,8 @@
   background-image: url('/src/assets/shipGreen_manned.svg');
   background-size: cover;
   background-repeat: no-repeat;
-  width: 35vw;
-  height: 30vh;
+  width: 120px;
+  height: 140px;
   margin-top: 20px;
 }
 
@@ -36,8 +36,8 @@
     url('/src/assets/shipGreen_manned.svg');
   background-size: cover;
   background-repeat: no-repeat;
-  width: 35vw;
-  height: 30vh;
+  width: 120px;
+  height: 140px;
   margin-top: 20px;
 }
 
