--- a/src/components/GoodAlien.module.scss
+++ b/src/components/GoodAlien.module.scss
@@ -10,15 +10,6 @@
   height: 200px;
 }
 
-.textOfAlien {
-  background-image: url('/src/assets/У\ ВАС\ ЕСТЬ\ МАКАРОНЫ\ ПО\ СКИДКЕ_.svg'),
-    url('/src/assets/бабл.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100px;
-  height: 100px;
-}
-
 .goodAlien {
   background-image: url('/src/assets/shipYellow_manned.svg');
   background-size: cover;
@@ -34,4 +25,24 @@
   background-repeat: no-repeat;
   width: 100px;
   height: 100px;
+}
+
+.textBG {
+  display: flex;
+  flex-direction: column;
+
+  background-image: url('/src/assets/бабл.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 120px;
+  height: 100px;
+}
+
+.textOfAlien {
+  overflow-wrap: break-word;
+  align-self: center;
+  text-align: center;
+  margin-top: 15px;
+  width: 100px;
+  height: 80px;
 }
