--- a/src/pages/Results.module.scss
+++ b/src/pages/Results.module.scss
@@ -3,6 +3,7 @@
   background-repeat: repeat-x;
   background-size: cover;
   height: 100vh;
+  width: 100vw;
 
   display: flex;
   flex-direction: column;
@@ -93,4 +94,104 @@
   margin-bottom: 15px;
   width: 50px;
   height: 50px;
+}
+
+@media (min-width: 768px) {
+  .startingPage {
+    background-image: url('/src/assets/e9896186f55021eeb4a5f39fea811124\ 1.svg');
+    background-repeat: repeat-x;
+    background-size: cover;
+    width: 425px;
+    height: 650px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .woodenBG {
+    margin: 20px;
+    height: 600px;
+    width: 350px;
+    background-size: cover;
+    background-image: url('/src/assets/woodenBG.svg');
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .startButton {
+    font-family: sans-serif;
+
+    color: white;
+    font-weight: bold;
+    font-size: xx-large;
+    background-color: #f14338;
+    border-radius: 6px;
+    border-style: none;
+    margin-bottom: 15px;
+    width: 255px;
+    padding: 15px;
+    text-decoration: none;
+    text-align: center;
+
+    &:hover {
+      background-color: #de2a1d;
+    }
+  }
+
+  .star {
+    width: 60px;
+    height: 60px;
+    background-size: cover;
+    background-image: url('/src/assets/star.svg');
+
+    display: flex;
+    flex-direction: row;
+  }
+
+  .stars {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .text {
+    text-align: center;
+    color: white;
+  }
+
+  .buttonTelegram {
+    background-image: url('/src/assets/telegram.svg');
+    background-size: cover;
+    border-radius: 15px;
+    border-style: none;
+    margin: 5px;
+    margin-bottom: 15px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .buttonOdnoklassniki {
+    background-image: url('/src/assets/odnoklassniki.svg');
+    background-size: cover;
+    border-radius: 15px;
+    border-style: none;
+    margin: 5px;
+    margin-bottom: 15px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .buttonVk {
+    background-image: url('/src/assets/vk.svg');
+    background-size: contain;
+    border-radius: 15px;
+    border-style: none;
+    margin: 5px;
+    margin-bottom: 15px;
+    width: 50px;
+    height: 50px;
+  }
 }
